--- a/.env
+++ b/.env
@@ -2,6 +2,4 @@ PORT=:8080
 READ_TIMEOUT=5
 WRITE_READ_TIMEOUT=5
 
-TEMPLATE_FOLDER= ../template
-WORD_FOLDER=../word
-PDF_FOLDER=../pdf
+WORD_FOLDER=../word/
