--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
       context: .
       dockerfile: ./Dockerfile
     ports:
-      - 8080:8080
+      - "8080:8080"
 
   # for convert word to pdf
   gotenberg:
     image: gotenberg/gotenberg:7
+    ports:
+      - "3000:3000"
